Create map fields stage

--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -15,3 +15,18 @@ a {
   text-decoration: none;
   color: black;
 }
+
+.leaflet-editing-icon {
+  border-radius: 50% !important;
+  background: #3388ff !important;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.4) !important;
+  width: 10px !important;
+  height: 10px !important;
+  margin-left: -5px !important;
+  margin-top: -5px !important;
+}
+
+.leaflet-div-icon {
+  background: none !important;
+  border: none !important;
+}
