--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -1,5 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
+
+body {
+    height: 100dvh;
+}
+
+#root {
+    height: 100%;
+}
+
 :root {
   --main-color: #3aaa35;
   --white-gray: #e5e7eb;
