--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -9,7 +9,7 @@ body {
 }
 
 :root {
-  --main-color: #3aaa35;
+  --main-color: #43c03d;
   --white-gray: #e5e7eb;
   --navbar-button-color: #f3f5f7;
   --subtitle: #878787;
