--- a/src/widgets/NavBarNested/classes/NavBarNested.module.css
+++ b/src/widgets/NavBarNested/classes/NavBarNested.module.css
@@ -1,9 +1,24 @@
-﻿.navbar {
+﻿/* свернуто (рейл с иконками) */
+.railRoot {
+  width: 100%;
+  height: 100%;
   padding: var(--mantine-spacing-lg);
-  padding-bottom: 0;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.railIcon {
+  width: 40px;
+  height: 40px;
+}
+
+/* развернуто (полный) */
+.navbar {
   display: flex;
   height: 100%;
   flex-direction: column;
+  background: var(--mantine-color-body);
 }
 
 .header {
@@ -11,17 +26,6 @@
   padding-top: 0;
   margin-left: calc(var(--mantine-spacing-md) * -1);
   margin-right: calc(var(--mantine-spacing-md) * -1);
-}
-
-.links {
-  flex: 1;
-  margin-left: calc(var(--mantine-spacing-md) * -1);
-  margin-right: calc(var(--mantine-spacing-md) * -1);
-}
-
-.linksInner {
-  padding-top: var(--mantine-spacing-xl);
-  padding-bottom: var(--mantine-spacing-xl);
 }
 
 .footer {
